--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>HW_Manager</artifactId>
+    <artifactId>HW_ProdManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
